--- a/logger/pom.xml
+++ b/logger/pom.xml
@@ -17,11 +17,6 @@
             <artifactId>store</artifactId>
             <version>${prma-version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.caibowen.prma</groupId>
-            <artifactId>monitor</artifactId>
-            <version>${prma-version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -34,10 +29,18 @@
             <artifactId>logback-core</artifactId>
             <version>${logback-version}</version>
         </dependency>
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.caibowen.prma</groupId>
+            <artifactId>monitor</artifactId>
+            <version>${prma-version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
