--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
     <developers>
         <developer>
+            <id>xKommando</id>
             <name>Cai Bowen</name>
             <email>feedback2bowen@outlook.com</email>
             <url>http://www.caibowen.com</url>
@@ -25,6 +26,11 @@
             <url>https://www.gnu.org/licenses/lgpl.html</url>
         </license>
     </licenses>
+
+    <scm>
+        <url>https://github.com/xKommando/PRMA</url>
+        <connection>scm:https://github.com/xkommando/PRMA.git</connection>
+    </scm>
 
     <modules>
         <module>analyze</module>
@@ -54,6 +60,13 @@
     </properties>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.10.4</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -71,10 +84,6 @@
                 <configuration>
                     <skip>true</skip>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.scala-tools</groupId>
