--- a/webface/web/WEB-INF/web.xml
+++ b/webface/web/WEB-INF/web.xml
@@ -4,6 +4,10 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 
+    <welcome-file-list>
+        <welcome-file>login.html</welcome-file>
+    </welcome-file-list>
+    
     <context-param>
         <param-name>manifest</param-name>
         <param-value>classpath:app-manifest.xml</param-value>
