--- a/logger/pom.xml
+++ b/logger/pom.xml
@@ -37,6 +37,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.msgpack</groupId>
+            <artifactId>msgpack-scala_2.10</artifactId>
+            <version>${msgpack-version}</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.caibowen.prma</groupId>
             <artifactId>monitor</artifactId>
             <version>${prma-version}</version>
