--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <lift-json-version>2.5.1</lift-json-version>
         <slf4j-version>1.7.7</slf4j-version>
         <logback-version>1.1.2</logback-version>
+        <msgpack-version>0.6.11</msgpack-version>
         <protobuf-version>2.6.1</protobuf-version>
         <javaxmail-version>1.4.7</javaxmail-version>
     </properties>
